# Llada-multimodal

./: .dockerignore  Dockerfile  create_ds.py  extract_websight.py  fetch_data.sh  fetch_websight.sh  llada.py  llada_common.py  llada_train.py  modal_run.py  pyproject.toml  requirements.txt  test.json  train.json  val.json
datasets/websight/: test.json  train.json  val.json
