[project]
name = "llada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "einops>=0.8.1",
    "modal>=0.75.7",
    "open-clip-torch==2.*",
    "pandas>=2.2.3",
    "timm==0.9.*",
    "torchvision>=0.22.0",
    "transformers==4.38.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
