[project]
name = "llada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bert-score>=0.3.13",
    "einops>=0.8.1",
    "evaluate>=0.4.3",
    "modal>=0.75.7",
    "numpy>=2.2.5",
    "open-clip-torch==2.*",
    "pandas>=2.2.3",
    "rouge-score>=0.1.2",
    "timm==0.9.*",
    "torchvision>=0.22.0",
    "transformers==5.0.0rc3",
    "wandb>=0.19.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
